记事本  ------   methods心得    如果函数功能一样，那么可以在传参数的时候传入一个固定的值，用来区分哪一部分（前提功能一样） 双向数据绑定 ----双向链路      数据对应相应的元素，修改数据可以修改相应元素 。  修改元素可以修改相应数据

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="logo">toDoList</div>
                 <div class="input-area">
-                    <input type="text" @input='handleInput' />
+                    <input type="text" @input='handleInput' :value='value' />
                     <button @click='add'>添加</button>
                 </div>
             </div>
